--- a/app/services/services.module.scss
+++ b/app/services/services.module.scss
@@ -52,7 +52,7 @@
             }
         }
         .divImagesWeb{
-            @apply flex h-fit flex-row justify-center items-end;
+            @apply flex h-fit flex-row justify-center items-end z-0;
             img{
                 @apply h-auto w-full max-w-[200px] lg:max-w-[500px];
             }
@@ -95,7 +95,7 @@
                 @apply w-fit px-10 text-sm lg:text-base py-2 rounded-3xl mt-5 bg-gradient-to-b from-[#B787F5] to-[#55367E];
             }
             img{
-                @apply relative w-full h-auto max-w-[250px] lg:max-w-[800px];
+                @apply relative w-full h-auto max-w-[250px] lg:max-w-[800px] z-0;
             }
             @media (min-width: 1024px) {
                 img{
@@ -125,7 +125,7 @@
             @apply absolute w-full h-full object-cover;
         }
         div{
-            @apply flex flex-col mb-7 justify-center lg:justify-start items-center lg:items-start text-center lg:text-left w-full z-10 px-5;
+            @apply flex flex-col mb-2 justify-center lg:justify-start items-center lg:items-start text-center lg:text-left w-full z-10 px-5;
             h1{
                 @apply uppercase text-7xl lg:text-9xl font-bold;
                 font-family: 'Thunder';
@@ -158,7 +158,7 @@
             }
         }
         .divImagesWeb{
-            @apply flex h-fit flex-row justify-center items-end;
+            @apply flex h-fit flex-row justify-center items-end z-0;
             img{
                 @apply h-auto w-full max-w-[250px] lg:max-w-[500px];
             }
