--- a/app/services/services.module.scss
+++ b/app/services/services.module.scss
@@ -171,24 +171,24 @@
                 @apply absolute w-full h-full object-cover;
             }
             div{
-                @apply flex flex-col w-full;
+                @apply flex flex-col mb-2 justify-center lg:justify-start items-center lg:items-start text-center lg:text-left w-full z-10 px-5;
                 .logoDesign{
-                    @apply w-[300px]
+                    @apply w-full max-w-[100px] lg:max-w-[300px];
                 }
                 span{
                     @apply text-[#851A1A];
                 }
                 h2{
-                    @apply text-3xl font-bold mb-4;
+                    @apply text-xl lg:text-3xl font-bold mb-4;
                     font-family: 'DM Sans';
     
                 }
                 h4{
-                    @apply uppercase text-xl mt-5 border-[1px] border-[#851A1A] py-1 px-10 bg-[#851A1A] w-fit bg-opacity-15 rounded-3xl mb-8;
+                    @apply uppercase text-sm lg:text-xl mt-5 border-[1px] border-[#851A1A] py-1 px-5 lg:px-10 bg-[#851A1A] w-fit bg-opacity-15 rounded-3xl mb-3 lg:mb-8;
                     font-family: 'Orbitron';
                 }
                 p{
-                    @apply text-lg font-normal text-[#727885];
+                    @apply text-sm lg:text-base font-normal text-[#727885];
                     font-family: 'DM Sans';
                     b{
                         @apply text-white ml-10;
@@ -201,10 +201,10 @@
                     }
                 }
                 a{
-                    @apply w-fit px-10 py-2 rounded-3xl mt-5 bg-gradient-to-b from-[#AC2323] to-[#851A1A];
+                    @apply w-fit text-sm lg:text-base px-10 py-2 rounded-3xl mt-5 bg-gradient-to-b from-[#AC2323] to-[#851A1A];
                 }
                 img{
-                    @apply relative w-full h-auto;
+                    @apply relative w-full h-auto max-w-[250px] lg:max-w-[800px];
                     transition: 0.2s all ease-in-out;
                 }
             }
@@ -212,27 +212,28 @@
     .cyberSlide{
         @apply flex flex-col lg:flex-row w-full max-w-[1600px] lg:px-20 h-full justify-center items-center;
             .bgImgDeg{
-                @apply absolute w-full max-w-[3000px]  h-full object-cover;
+                @apply absolute w-full max-w-[3000px] h-full -mb-[0px] md:-mb-0 object-cover;
             }
+
             div{
-                @apply flex flex-col w-full z-10;
+                @apply flex flex-col mb-2 justify-center lg:justify-start items-center lg:items-start text-center lg:text-left w-full z-10 px-5;
                 .logoKasper{
-                    @apply w-[600px]
+                    @apply w-full max-w-[250px] lg:max-w-[600px]
                 }
                 span{
                     @apply text-[#016E5D];
                 }
                 h2{
-                    @apply text-3xl font-bold mb-4;
+                    @apply text-xl lg:text-3xl font-bold mb-4;
                     font-family: 'DM Sans';
     
                 }
                 h4{
-                    @apply uppercase text-xl mt-5 border-[1px] border-[#016E5D] py-1 px-10 bg-[#016E5D] w-fit bg-opacity-10 rounded-3xl mb-8;
+                    @apply uppercase text-sm lg:text-xl mt-5 border-[1px] border-[#016E5D] py-1 px-5 lg:px-10 bg-[#016E5D] w-fit bg-opacity-10 rounded-3xl mb-3 lg:mb-8;
                     font-family: 'Orbitron';
                 }
                 p{
-                    @apply text-lg font-normal text-[#727885];
+                    @apply text-sm lg:text-base font-normal text-[#727885];
                     font-family: 'DM Sans';
                     b{
                         @apply text-white ml-10;
@@ -245,7 +246,7 @@
                     }
                 }
                 a{
-                    @apply w-fit px-10 py-2 rounded-3xl mt-5 bg-gradient-to-r from-[#35D3BB] to-[#016E5D];
+                    @apply w-fit px-10 text-sm lg:text-base py-2 rounded-3xl mt-5 bg-gradient-to-r from-[#35D3BB] to-[#016E5D];
                 }
                 img{
                     @apply relative w-full h-auto;
