--- a/app/accueil/accueil.module.scss
+++ b/app/accueil/accueil.module.scss
@@ -5,7 +5,7 @@
 // }
 // Intro Page Section
 .introPage {
-    @apply absolute w-screen h-[40vh] flex flex-col justify-center items-center;
+    @apply absolute w-screen h-[50vh] lg:h-[60vh] flex flex-col justify-center items-center;
 
     img {
         @apply w-full h-full absolute object-cover -z-20;
