--- a/app/contact/contact.module.scss
+++ b/app/contact/contact.module.scss
@@ -27,6 +27,10 @@
                     font-family: 'Montserrat';
                 }
             }
+            .fadeInText{
+                @apply uppercase text-xs lg:text-sm text-white mt-5 w-full flex-col justify-center items-center;
+                font-family: 'Montserrat';
+            }
             .fadeInForm{
                 @apply flex-col justify-center w-full max-w-[620px] mx-auto px-5 items-center gap-5 mt-10 z-10;
                 div{
