--- a/app/components/components.module.scss
+++ b/app/components/components.module.scss
@@ -15,3 +15,20 @@
         }
     }
 }
+.footerSectionDev{
+    @apply flex flex-col justify-center items-center w-full px-5 lg:px-0 py-5 lg:py-10 bg-white ;
+    div{
+        @apply flex flex-row justify-center items-center text-[#434343] uppercase;
+        a{
+            @apply uppercase hover:text-black text-xl lg:text-2xl transition-all ease-in-out duration-200;
+            font-family: 'Thunder';
+        }
+        span{
+            @apply text-[#B787F5] pb-1 lg:pb-2;
+        }
+        h1{
+            @apply text-xl;
+            font-family: 'Thunder';
+        }
+    }
+}
