update on new version

--- a/app/accueil/accueil.module.scss
+++ b/app/accueil/accueil.module.scss
@@ -1,80 +1,47 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Orbitron:wght@400..900&display=swap');
 
-// .accueilPage{
-//     @apply bg-[var(--color-bg-black)];
-// }
-// Intro Page Section
-.introPage {
-    @apply absolute w-screen h-[50vh] lg:h-[60vh] flex flex-col justify-center items-center;
 
-    img {
-        @apply w-full h-full absolute object-cover -z-20;
-    }
-
-    video {
-        @apply relative -z-10 w-[600px] h-auto;
-    }
-}
 
 // Header Page Section
 .headerAccueil {
     @apply w-screen h-auto relative flex flex-col justify-center items-center bg-[var(--color-bg-black)] mix-blend-multiply;
     transition: transform 0.5s ease-out, opacity 0.5s ease-out;
-    div {
+    .headerTitle{
+        @apply w-screen overflow-x-hidden h-[50vh] lg:h-[60vh] pt-20 flex flex-col justify-center items-center;
         h1 {
-            @apply uppercase font-bold text-7xl lg:text-[150px] text-center text-white;
+            @apply uppercase font-bold text-7xl lg:text-[150px] text-center text-transparent;
+            background-image: url('/img/ciel.png');
+            text-shadow: 0px 0px 100px rgba($color: #fff, $alpha: 0.3);
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-clip: text;
+            -webkit-background-clip: text;
             font-family: 'Thunder';
             line-height: 1;
             transition: transform 0.5s ease-out, opacity 0.5s ease-out;
-
             span {
-                @apply uppercase text-[var(--color-main)];
+                @apply uppercase bg-gradient-to-r from-purple-300 to-purple-700 bg-clip-text text-transparent;
             }
         }
     }
+        
+    
 
     .textHeader {
-        @apply relative w-full max-w-7xl h-fit py-20 pt-0 px-10;
-
-        .bgImg {
-            @apply w-full h-full absolute z-0;
+        @apply relative w-full max-w-7xl h-fit flex flex-col justify-center items-center mb-5;
+        h2{
+            @apply text-white text-lg lg:text-5xl font-black text-center px-1;
+            font-family: 'DM Sans';
+            span{
+                @apply text-[var(--color-main)];
+            }
         }
-
-        .carteImgs {
-            @apply relative z-10 w-full max-w-[200px] md:max-w-[350px] h-auto;
-
-        }
-
-        .contentCarte {
-            @apply relative z-10 flex flex-col justify-center items-center md:items-start text-[#EDEDED] ml-0 md:ml-10;
-
-            h3 {
-                @apply uppercase hidden md:block w-fit py-1 bg-[#55367E] bg-opacity-30 rounded-3xl border-[1px] border-[#B787F5] px-5;
-                letter-spacing: 1.5px;
-                font-family: 'Orbitron';
-            }
-
-            h2 {
-                @apply text-xl md:text-4xl mt-10 font-black text-center md:text-left;
-                font-family: 'DM Sans';
-
-                span {
-                    @apply text-[#B787F5];
-                }
-            }
-
-            p {
-                @apply text-[#727885] font-normal text-lg md:text-xl text-center md:text-left mb-10 mt-5;
-                font-family: 'DM Sans';
-
-                span {
-                    @apply text-[#fff] ml-10;
-                }
-            }
-
-            a {
-                @apply uppercase text-sm md:text-base font-normal bg-gradient-to-b from-[#B787F5] to-[#55367E] rounded-3xl py-1 px-5 mt-0 mb-10 md:mb-0 md:mt-5;
-                font-family: 'DM Sans';
+        p{
+            @apply text-zinc-500 text-base lg:text-2xl text-center mt-2;
+            font-family: 'DM Sans';
+            span{
+                @apply text-white;
             }
         }
     }
@@ -179,33 +146,26 @@
 // Partners Section 
 
 .partnersBand {
-    @apply flex flex-col w-screen overflow-hidden justify-center gap-5 pt-10 pb-20 items-center bg-[var(--color-bg-black)];
+    @apply flex flex-col w-screen overflow-hidden justify-center gap-5 pt-10 pb-10 items-center bg-[var(--color-bg-black)];
 
     .partnersHeader {
         @apply flex flex-col justify-center items-center;
 
         h1 {
-            @apply text-[#EDEDED] font-extrabold text-3xl md:text-8xl opacity-80 uppercase;
-            font-family: 'Thunder';
-            letter-spacing: 1.5px;
-        }
-
-        h2 {
-            @apply uppercase text-[#EDEDED] text-2xl md:text-4xl opacity-80;
-            font-family: 'Orbitron';
-
-            span {
-                @apply text-[var(--color-main)];
+            @apply text-[#EDEDED] font-extrabold text-2xl md:text-5xl;
+            font-family: 'DM Sans';
+            span{
+                @apply bg-gradient-to-r from-purple-400 to-purple-600 bg-clip-text text-transparent;
             }
         }
     }
 
     .forward {
-        @apply flex -ml-[100%] mt-0 md:mt-10 flex-row justify-center items-center gap-5 md:gap-10;
+        @apply flex -ml-[100%] mt-0 md:mt-2 flex-row justify-center items-center gap-5 md:gap-10;
         animation: forwardBand 60s infinite linear;
 
         img {
-            @apply w-auto h-full max-h-[30px] md:max-h-[60px] opacity-20 hover:opacity-100 transition-all ease-in-out duration-200;
+            @apply w-auto h-full max-h-[20px] md:max-h-[40px] opacity-20 hover:opacity-100 transition-all ease-in-out duration-200;
         }
     }
 
