--- a/app/accueil/accueil.module.scss
+++ b/app/accueil/accueil.module.scss
@@ -109,43 +109,27 @@
     }
 
     .smart {
-        @apply flex flex-col lg:flex-row py-0 mt-0 md:py-10 md:mt-10 justify-center items-center w-full max-w-7xl;
+        @apply flex flex-col lg:flex-col py-0 mt-0 md:py-10 md:mt-10 justify-center items-center w-screen;
+        .smartDivImg{
+            @apply w-full flex flex-col justify-center px-5 items-center mb-10;
+            .bandText {
+                @apply absolute z-10 bg-[var(--color-bg-black)] w-screen -rotate-6 overflow-x-hidden h-[80px] py-1 flex flex-col justify-center items-center text-[#EDEDED];
 
-        .smartText {
-            @apply flex w-full flex-col justify-center md:items-start items-center text-center md:text-left text-[#EDEDED];
+                div {
+                    @apply relative -ml-[100%];
+                    animation: textRoll 30s infinite linear;
 
-            h3 {
-                @apply hidden md:block uppercase w-fit py-1 bg-[#55367E] bg-opacity-30 rounded-3xl border-[1px] border-[#B787F5] px-5;
-                letter-spacing: 1.5px;
-                font-family: 'Orbitron';
-            }
+                    h1 {
+                        @apply uppercase font-bold text-2xl md:text-6xl;
+                        letter-spacing: 1.5px;
+                        font-family: 'Thunder';
 
-            h2 {
-                @apply text-2xl md:text-4xl mt-0 md:mt-10 font-black;
-                font-family: 'DM Sans';
-
-                span {
-                    @apply text-[#B787F5];
+                        span {
+                            @apply text-[var(--color-main)];
+                        }
+                    }
                 }
             }
-
-            p {
-                @apply text-[#727885] font-normal text-base md:text-xl mb-10 mt-5;
-                font-family: 'DM Sans';
-
-                span {
-                    @apply text-[#fff] ml-10;
-                }
-            }
-
-            a {
-                @apply uppercase text-sm md:text-base font-normal bg-gradient-to-b from-[#B787F5] to-[#55367E] rounded-3xl py-1 px-5 mt-0 md:mt-5;
-                font-family: 'DM Sans';
-            }
-        }
-
-        .smartCarts {
-            @apply w-full max-w-[400px] md:max-w-[700px] relative mt-10 md:-mt-10 flex flex-row justify-center items-start;
         }
     }
 }
