--- a/app/gallerie/gallerie.module.scss
+++ b/app/gallerie/gallerie.module.scss
@@ -12,13 +12,13 @@
   }
   
   .cardGallery {
-    @apply absolute top-[20%] lg:top-auto transition-all ease-in-out duration-500;
+    @apply absolute top-[10%] lg:top-auto transition-all ease-in-out duration-500;
     img {
       @apply object-cover w-full h-auto max-w-[250px] lg:max-w-[400px] transition-all ease-in-out duration-500;
     }
   
       .info {
-        @apply absolute left-[-15%] -bottom-48 w-[130%] text-center lg:w-[135%] text-white flex flex-col justify-center items-center lg:top-[30%] lg:left-[-120%] rounded-3xl backdrop-blur-xl bg-black bg-opacity-35 py-5 lg:py-14 px-0;
+        @apply absolute left-[-15%] -bottom-48 w-[130%] text-center lg:w-[135%] text-white flex flex-col justify-center items-center lg:top-[30%] lg:left-[-120%] rounded-3xl backdrop-blur-xl bg-black bg-opacity-10 lg:bg-opacity-35 py-5 lg:py-14 px-0;
         h3 {
           @apply text-6xl lg:text-8xl mt-3 font-bold uppercase;
             font-family: 'Thunder'
@@ -52,7 +52,7 @@
   }
   
   .controls {
-    @apply absolute w-full max-w-[360px] lg:max-w-xs flex flex-row justify-between items-center z-10 bottom-[50%] lg:bottom-[15%] gap-3 mt-4;
+    @apply absolute w-full max-w-[360px] lg:max-w-xs flex flex-row justify-between items-center z-10 bottom-[60%] lg:bottom-[15%] gap-3 mt-4;
     button {
       @apply px-4 py-2 text-xl lg:text-3xl text-white font-bold rounded ;
     }
