--- a/app/gallerie/gallerie.module.scss
+++ b/app/gallerie/gallerie.module.scss
@@ -18,7 +18,7 @@
     }
   
       .info {
-        @apply absolute left-[-15%] -bottom-48 w-[130%] text-center lg:w-[135%] text-white flex flex-col justify-center items-center lg:top-[30%] lg:left-[-120%] rounded-3xl backdrop-blur-xl bg-black bg-opacity-10 lg:bg-opacity-35 py-5 lg:py-14 px-0;
+        @apply absolute left-[-15%] -bottom-48 lg:bottom-[20%] w-[130%] text-center lg:w-[135%] text-white flex flex-col justify-center items-center lg:top-[30%] lg:left-[-120%] rounded-3xl backdrop-blur-xl bg-black bg-opacity-10 lg:bg-opacity-35 py-5 lg:py-14 px-0;
         h3 {
           @apply text-6xl lg:text-8xl mt-3 font-bold uppercase;
             font-family: 'Thunder'
